--- a/HW3/HW3-Report.html
+++ b/HW3/HW3-Report.html
@@ -11809,7 +11809,7 @@ where, λ is the wavelength of the sinusoidal factor,
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Results">Results<a class="anchor-link" href="#Results">&#182;</a></h2><p>The filter and the corresponding charts generally worked well to detect defects. However, some of the defects were not easy to identify if the pixel values of the defects are too close to the overall mean of the pixel values of the whole image. The other problem this method faces is that the method is too sensitive to detect that parts that are not considered as defect by visual inspection are detect as defects, increasing the type I error, giving false positive results. Nevertheless, these unwanted cases are to be considered negligible and we can conclude that Gabor filtering works well with our images and detecting defects in linen manufacturing.</p>
+<h2 id="Results">Results<a class="anchor-link" href="#Results">&#182;</a></h2><p>The filter and the corresponding charts generally worked well to detect defects. However, some of the defects were not easy to identify if the pixel values of the defects are too close to the overall mean of the pixel values of the whole image. The other problem this method faces is that the method is too sensitive to detect the parts that are not considered as defect by visual inspection are detected as defects, increasing the type I error, giving false positive results. Nevertheless, these unwanted cases are to be considered negligible and we can conclude that Gabor filtering works well with our images and detecting defects in linen manufacturing.</p>
 
 </div>
 </div>
